--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "markmap-lib": "^0.15.8",
+    "markmap-view": "^0.15.8",
     "vue": "^3.2.13"
   },
   "devDependencies": {
